gatk pipeline qsub_2 automated split

--- a/gatk_pipeline/config.cfg
+++ b/gatk_pipeline/config.cfg
@@ -3,18 +3,21 @@
 # ============================
 
 # This is a text file containing list of sample names
-samples_file=/projects/winzeler/ROTATION_PROJECT/daisy/sarah_yliu4/samples.txt
+samples_file=
 
 # This is the working directory for all input/output files
-main_dir=/oasis/tscc/scratch/dwc001/sarah/yliu4
+main_dir=
 
 # This is where the fastq files are located
 # where fastq files are named {sample}_R1.fastq.gz, {sample}_R2.fastq.gz for paired end
-fastq_dir=/oasis/tscc/scratch/dwc001/sarah/yliu4/fastq_files
+fastq_dir=
 
 # ============================
 # Change if different species
 # ============================
+
+# Abbreviation format examples: Plasmodium falciparum -> p_fal, Saccharomyces cerevisiae -> s_cer
+species_abbr=p_fal
 
 # This is where the reference genome is located
 ref_dir=/projects/winzeler/GENOME_RESOURCES/pf/p_fal_ref
