update subtraction in gatk_pipeline

--- a/gatk_pipeline/config.cfg
+++ b/gatk_pipeline/config.cfg
@@ -2,6 +2,9 @@
 # Change every time
 # ============================
 
+# This is the name for this sample grouping (used for VCF, GATK-Filters name)
+group_name=
+
 # This is a text file containing list of sample names
 samples_file=
 
