gatk_pipeline small updates

--- a/gatk_pipeline/config.cfg
+++ b/gatk_pipeline/config.cfg
@@ -15,6 +15,9 @@ main_dir=
 # where fastq files are named {sample}_R1.fastq.gz, {sample}_R2.fastq.gz for paired end
 fastq_dir=
 
+# This is the strain
+strain=
+
 # ============================
 # Change if different species
 # ============================
