changes for TSCC 2

--- a/gatk_pipeline/config.cfg
+++ b/gatk_pipeline/config.cfg
@@ -1,22 +1,24 @@
+# NOTE: full paths are needed to work with the other gatk_pipeline scripts, sorry :')
+
 # ============================
 # Change every time
 # ============================
 
 # This is the name for this sample grouping (used for VCF, GATK-Filters name)
-group_name=
+group_name=Sarah-HT2-Toxin-2-3D7
 
 # This is a text file containing list of sample names
-samples_file=
+samples_file=/tscc/projects/ps-winzelerlab/SEQUENCING/Winzeler/Sarah/Sarah_HT-2_Toxin_2/samples.txt
 
 # This is the working directory for all input/output files
-main_dir=
+main_dir=/tscc/projects/ps-winzelerlab/SEQUENCING/Winzeler/Sarah/Sarah_HT-2_Toxin_2/output
 
 # This is where the fastq files are located
 # where fastq files are named {sample}_R1.fastq.gz, {sample}_R2.fastq.gz for paired end
-fastq_dir=
+fastq_dir=/tscc/projects/ps-winzelerlab/SEQUENCING/Winzeler/Sarah/Sarah_HT-2_Toxin_2/fastq_files
 
 # This is the strain
-strain=
+strain=3D7
 
 # ============================
 # Change if different species
@@ -26,17 +28,8 @@ strain=
 species_abbr=p_fal
 
 # This is where the reference genome is located
-ref_dir=/projects/winzeler/GENOME_RESOURCES/pf/p_fal_ref
+ref_dir=/tscc/projects/ps-winzelerlab/GENOME_RESOURCES/p_fal/p_fal_ref
 
 # This is the reference genome file
 ref_fasta=$ref_dir/p_fal.fasta
 
-# ===========================
-# Don't change
-# ===========================
-
-# This is where GenomeAnalysisTK.jar is located
-gatk_dir=/opt/biotools/GenomeAnalysisTK/3.5
-
-# This is where picard.jar is located
-picard_dir=/opt/biotools/picard
