TSCC working seq pipeline for 2024-2025

--- a/ont_pipeline/config_3D7.cfg
+++ b/ont_pipeline/config_3D7.cfg
@@ -5,10 +5,13 @@
 # ============================
 
 # This is the name for this sample grouping (used for VCF, GATK-Filters name)
-group_name=Sarah-HT2-Toxin-2-3D7
+group_name=replace
 
-# This is a text file containing list of sample names
+# This is a text file containing a list of sample names
 samples_file=/tscc/projects/ps-winzelerlab/SEQUENCING/replace/samples.txt
+
+# This is a text file containing a CORRESPONDING list of FASTQ sample names
+fastq_samples_file=/tscc/projects/ps-winzelerlab/SEQUENCING/replace/fastq_samples.txt
 
 # This is the working directory for all input/output files
 main_dir=/tscc/projects/ps-winzelerlab/SEQUENCING/replace/output
@@ -20,10 +23,6 @@ fastq_dir=/tscc/projects/ps-winzelerlab/SEQUENCING/replace/fastq_files
 # This is the strain
 strain=3D7
 
-# ============================
-# Change if different species
-# ============================
-
 # Abbreviation format examples: Plasmodium falciparum -> p_fal, Saccharomyces cerevisiae -> s_cer
 species_abbr=p_fal
 
@@ -33,3 +32,8 @@ ref_dir=/tscc/projects/ps-winzelerlab/GENOME_RESOURCES/p_fal/p_fal_ref
 # This is the reference genome file
 ref_fasta=$ref_dir/p_fal.fasta
 
+# SnpEff location
+snpeff_dir=/tscc/projects/ps-winzelerlab/TOOLS/snpEff
+
+# SnpEff species ID
+snpeff_species_id=Pf3D7v3_updated67
