--- a/ont_pipeline/config_Dd2.cfg
+++ b/ont_pipeline/config_Dd2.cfg
@@ -5,10 +5,13 @@
 # ============================
 
 # This is the name for this sample grouping (used for VCF, GATK-Filters name)
-group_name=Sarah-HT2-Toxin-2-3D7
+group_name=replace
 
-# This is a text file containing list of sample names
+# This is a text file containing a list of sample names
 samples_file=/tscc/projects/ps-winzelerlab/SEQUENCING/replace/samples.txt
+
+# This is a text file containing a CORRESPONDING list of FASTQ sample names
+fastq_samples_file=/tscc/projects/ps-winzelerlab/SEQUENCING/replace/fastq_samples.txt
 
 # This is the working directory for all input/output files
 main_dir=/tscc/projects/ps-winzelerlab/SEQUENCING/replace/output
@@ -18,18 +21,19 @@ main_dir=/tscc/projects/ps-winzelerlab/SEQUENCING/replace/output
 fastq_dir=/tscc/projects/ps-winzelerlab/SEQUENCING/replace/fastq_files
 
 # This is the strain
-strain=3D7
-
-# ============================
-# Change if different species
-# ============================
+strain=Dd2
 
 # Abbreviation format examples: Plasmodium falciparum -> p_fal, Saccharomyces cerevisiae -> s_cer
 species_abbr=p_fal
 
 # This is where the reference genome is located
-ref_dir=/tscc/projects/ps-winzelerlab/GENOME_RESOURCES/p_fal/p_fal_ref
+ref_dir=/tscc/projects/ps-winzelerlab/GENOME_RESOURCES/p_fal/PfDd2_PlasmoDB_66
 
 # This is the reference genome file
-ref_fasta=$ref_dir/p_fal.fasta
+ref_fasta=$ref_dir/PlasmoDB-66_PfalciparumDd2_Genome.fasta
 
+# SnpEff location
+snpeff_dir=/tscc/projects/ps-winzelerlab/TOOLS/snpEff
+
+# SnpEff species ID
+snpeff_species_id=PfDd2v66
