GATK and ONT pipeline updates

--- a/ont_pipeline/config_3D7.cfg
+++ b/ont_pipeline/config_3D7.cfg
@@ -10,6 +10,9 @@ group_name=replace
 # This is a text file containing a list of sample names
 samples_file=/tscc/projects/ps-winzelerlab/SEQUENCING/replace/samples.txt
 
+# This is a text file containing a list of BAM names
+bam_list=/tscc/projects/ps-winzelerlab/SEQUENCING/replace/bam_list.txt
+
 # This is a text file containing a CORRESPONDING list of FASTQ sample names
 fastq_samples_file=/tscc/projects/ps-winzelerlab/SEQUENCING/replace/fastq_samples.txt
 
